// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders correctly 1`] = `
<nav
  className="NavbarItems"
>
  <h1
    className="navbar-logo"
  >
    <i
      className="fas fa-cash-register"
    />
  </h1>
  <div
    className="menu-icon"
    onClick={[Function]}
  >
    <i
      className="fas fa-bars"
    />
  </div>
  <ul
    className="nav-menu"
  >
    <li>
      <a
        className="navbar-links"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        className="navbar-links"
        href="/login"
        onClick={[Function]}
      >
        Log in
      </a>
    </li>
    <li>
      <a
        href="/signup"
        onClick={[Function]}
      >
        <button
          className="btn btn--primary btn--medium"
          id="nav-signup"
        >
          Sign Up
        </button>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`SharedRoute renders correctly when anonymous 1`] = `
<button
  className="btn btn--primary btn--medium"
  id="undefined"
>
  anonymous
</button>
`;

exports[`SharedRoute renders correctly when logged in 1`] = `
<button
  className="btn btn--primary btn--medium"
  id="undefined"
>
  user
</button>
`;
